test/tests/errors/error-for-while-not-bool.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = 0;
    for (x = 1 while 3) {}
}